--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 header{
-    background-image:url(/1674783727_top-fon-com-p-fon-dlya-prezentatsii-pekarni-198.jpg);
+    background-image:url(./1674783727_top-fon-com-p-fon-dlya-prezentatsii-pekarni-198.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color: wheat;
